--- a/common.props
+++ b/common.props
@@ -5,7 +5,7 @@
     <Authors>Nongzhsh</Authors>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <PackageProjectUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/</RepositoryUrl>
   </PropertyGroup>
