--- a/src/Awesome.Net.WritableOptions/Awesome.Net.WritableOptions.csproj
+++ b/src/Awesome.Net.WritableOptions/Awesome.Net.WritableOptions.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Use to update option values into json file</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
