Support target framework: .net standard 2.1

--- a/common.props
+++ b/common.props
@@ -4,10 +4,8 @@
     <Version>3.0.0</Version>
     <Authors>Nongzhsh</Authors>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
-    <PackageProjectUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions/</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Nongzhsh/Awesome.Net.WritableOptions</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
